[gd_scene format=3 uid="uid://cmgmvi7dv27ah"]

[ext_resource type="StyleBox" uid="uid://dsm55rfa1xmm4" path="res://ui/assets/basic_panel.tres" id="1_6moto"]
[ext_resource type="Script" uid="uid://8agovjppmwjo" path="res://ui/view_3d_model.gd" id="2_5e326"]
[ext_resource type="Texture2D" uid="uid://ku8ydk8bce1i" path="res://ui/assets/ExternalLink.svg" id="3_drs6m"]
[ext_resource type="PackedScene" uid="uid://bxk33afbqntw8" path="res://world/model_render.tscn" id="3_eg6m8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5e326"]
bg_color = Color(0.078431375, 0.078431375, 0.078431375, 1)

[sub_resource type="InputEventKey" id="InputEventKey_eg6m8"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_drs6m"]
events = [SubResource("InputEventKey_eg6m8")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drs6m"]
bg_color = Color(0, 0, 0, 1)

[node name="View3dModel" type="PanelContainer" unique_id=680745111]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5e326")
script = ExtResource("2_5e326")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=49049014]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" unique_id=518991609]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_6moto")

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer/PanelContainer" unique_id=992223523]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/PanelContainer/Toolbar" unique_id=1553302586]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="OpenExternalButton" type="Button" parent="VBoxContainer/PanelContainer/Toolbar" unique_id=1575891301]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Open in external program."
icon = ExtResource("3_drs6m")
icon_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/PanelContainer/Toolbar" unique_id=1265881204]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Close"
shortcut = SubResource("Shortcut_drs6m")
text = "X"

[node name="ViewportBackground" type="PanelContainer" parent="VBoxContainer" unique_id=1418956313]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_drs6m")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/ViewportBackground" unique_id=299587002]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/ViewportBackground/SubViewportContainer" unique_id=1823375539]
unique_name_in_owner = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 605)
render_target_update_mode = 4

[node name="ModelRender" parent="VBoxContainer/ViewportBackground/SubViewportContainer/SubViewport" unique_id=310926734 instance=ExtResource("3_eg6m8")]
unique_name_in_owner = true

[node name="LoadingPanel" type="PanelContainer" parent="VBoxContainer/ViewportBackground" unique_id=155911846]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadingLabel" type="Label" parent="VBoxContainer/ViewportBackground/LoadingPanel" unique_id=1995959208]
layout_mode = 2
size_flags_vertical = 1
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingShowTimer" type="Timer" parent="VBoxContainer/ViewportBackground/LoadingPanel" unique_id=112802988]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="FailedPanel" type="PanelContainer" parent="VBoxContainer/ViewportBackground" unique_id=34117620]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ViewportBackground/FailedPanel" unique_id=443076004]
layout_mode = 2
size_flags_vertical = 1
text = "Failed to load :("
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/Toolbar/OpenExternalButton" to="." method="_on_open_external_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Toolbar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="VBoxContainer/ViewportBackground/LoadingPanel/LoadingShowTimer" to="." method="_on_loading_show_timer_timeout"]
